# iEditor

./: .clang-format  CMakeLists.txt  ConfigStruct.cpp  ConfigStruct.h  FindDialog.cpp  FindDialog.h  Main.cpp  MainWindow.cpp  MainWindow.h  NewWizard.cpp  NewWizard.h  OptionDialog.cpp  OptionDialog.h  OutputDack.cpp  OutputDock.cpp  OutputDock.h  Project.cpp  Project.h  ProjectDock.cpp  ProjectDock.h  ProjectTree.cpp  ProjectTree.h  README.md  SaveDialog.cpp  SaveDialog.h  TextEdit.cpp  TextEdit.h  TextEditTab.cpp  TextEditTab.h  iEditor.pro  iEditor.pro.user.906bf0b  iEditor.pro.user.aeca4e7  imagse.qrc
config/: config.ini
doc/: FirstSetup.md
images/: 鍥剧墖淇濆瓨.psd
lib/: README.md
lib/googletest-1.14.0/lib/cmake/GTest/: GTestTargets.cmake
lib/googletest-1.14.0/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
resource/: resource.qrc
resource/translations/: en_US.qm
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Singleton.h
src/gui/: CMakeLists.txt  Config.cpp  Config.h  Define.h  FileExplorer.cpp  FileExplorer.h  FindDialog.cpp  FindDialog.h  FontAwesome.cpp  FontAwesome.h  MainWindow.cpp  MainWindow.h  NewWizard.cpp  NewWizard.h  OptionDialog.cpp  OptionDialog.h  Panel.cpp  Panel.h  SaveDialog.cpp  SaveDialog.h  SideBar.cpp  SideBar.h  Terminal.cpp  Terminal.h  TextEdit.cpp  TextEdit.h  TextEditTabBar.cpp  TextEditTabBar.h
test/: CMakeLists.txt  ConfigTest.cpp  FontAwesomeTest.cpp  main.cpp
translations/: en_US.ts  zh_CN.ts
