CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(ieditor VERSION 1.1.1 LANGUAGES CXX)

SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLACS} -Wall -fpic -g -no-pie")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLACS} -Wall -fpic -g -no-pie")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLACS} -Wall -fpic -O2")
SET(CMAKE_CXX_FLACS_RELEASE "${CMAKE_CXX_FLACS} -Wall -fpic -O2")
ADD_DEFINITIONS(-Wall -Wno-unused-parameter -Wextra -fno-tree-pre)

# IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/build CACHE PATH "CMAKE_INSTALL_PREFIX set to ${PROJECT_SOURCE_DIR}/build" FORCE)
# ENDIF()

FIND_PACKAGE(Qt6 COMPONENTS Core Gui Widgets LinguistTools REQUIRED)

SET(TS_FILES
   ${PROJECT_SOURCE_DIR}/translations/zh_CN.ts
   ${PROJECT_SOURCE_DIR}/translations/en_US.ts
)

LINK_DIRECTORIES(

)

INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/src/common
   ${PROJECT_SOURCE_DIR}/src/gui
)

ADD_SUBDIRECTORY(./src)

#INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/config DESTINATION ${CMAKE_INSTALL_PREFIX} USE_SOURCE_PERMISSIONS  PATTERN "" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)

### Uint Test
ADD_SUBDIRECTORY(test)
INCLUDE(CTest)
ENABLE_TESTING()
ADD_TEST(NAME dc_db_unit_test COMMAND dc_db_unit_test)
